Style update -Added attributes to form -Update input tag -Update nav links -Add color variables -Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
     padding:0;
     box-sizing:border-box;
     font-family:Arial, Helvetica, sans-serif;
+    --purple:#8F3FA6;
+    --fadeBlack:#262626;
+    --graywhite:#D1D0D9;
 }
 #header{
     display:flex;
@@ -12,7 +15,7 @@
     position:fixed;
     top:0;
     padding:15px;
-    background-color:#eee;
+    background-color:var(--graywhite);
     
 }
 #nav-bar li{
@@ -26,7 +29,7 @@
 }
 .nav-link{
     text-decoration:none;
-    color:#202020;
+    color:var(--fadeBlack);
     font-weight:600;
     margin-left:20px;
     margin-right:20px;
@@ -57,6 +60,7 @@
     border:none;
     font-weight:800;
     text-transform:uppercase;
+    background-color:var(--purple);
 }
 #features-container{
     margin:30px auto;
@@ -107,7 +111,10 @@
     width:100px;
     padding:5px;
     margin:10px;
-   text-transform:uppercase;
+    text-transform:uppercase;
+    background-color:var(--purple);
+    border:none;
+    height:40px;
 }
 footer{
     margin-top:30px;
@@ -127,4 +134,13 @@ footer span{
     display:flex;
     justify-content:flex-end;
     font-size:14px;
+}
+@media (max-width:768px){
+    #pricing{
+        display:block;
+    }
+    .price{
+        border: 1px solid black;
+       margin:15px;
+    }
 }
